--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div class="header">
     <h1>알고리즘 문제풀이 해설 사이트</h1>
 </div>
+
 <div class="container">
     <div class="button-container">
         <button class="add-button" onclick="showPopup()">
@@ -21,7 +23,7 @@
                 </svg>
             </span>
         </button>
-        <button class="delete-button" onclick="deleteProblem()">
+        <button class="delete-button" onclick="showPasswordPopup()">
             <span class="text">삭제</span>
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -30,6 +32,7 @@
             </span>
         </button>
     </div>
+
     <div class="week-section" id="week1">
         <h2>1주차</h2>
     </div>
@@ -38,6 +41,7 @@
         <h2>2주차</h2>
     </div>
 </div>
+
 <div class="popup" id="popup">
     <div class="popup-content">
         <span class="close" onclick="hidePopup()">닫기</span>
@@ -54,6 +58,16 @@
         <button class="submit" onclick="addProblem()">추가하기</button>
     </div>
 </div>
+
+<div class="popup" id="password-popup">
+    <div class="popup-content">
+        <span class="close" onclick="hidePasswordPopup()">닫기</span>
+        <h3>삭제는 사이트 게시자만 가능합니다.</h3>
+        <input type="password" id="password" placeholder="암호를 입력하세요">
+        <button class="submit" onclick="verifyPassword()">확인</button>
+    </div>
+</div>
+
 <script src="scripts.js"></script>
 </body>
 </html>
